--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,4 +60,9 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'com.google.firebase:firebase-core:17.0.0'
 }
+
+apply plugin: 'com.android.application'  
+apply plugin: 'com.google.gms.google-services'
